--- a/documentation/LambdaScript.tex
+++ b/documentation/LambdaScript.tex
@@ -590,6 +590,25 @@ Mathematically, it is nothing more than a set of pairs, where each pair consists
 
 \newpage
 
+\subsection{Equality of Type Equations}
+
+Define $\cong$ to be an equivalence relation on $Type \times Type$ as follows
+
+$$\cong = \{((t_1, t_2), (t_2, t_1)) \text{ } | \text{ } \forall (t_1, t_2) \in Type \times Type\}$$
+
+If can also be defined as
+
+$$(t_1, t_2) \cong (t_3, t_4) = ((t_1, t_2) = (t_3, t_4) \lor (t_1, t_2) = (t_4, t_3))$$
+
+$\cong$ captures the notion of two type equations containing the exact same information
+
+For example
+
+$$(t_1 = int) \cong (int, t_1)$$
+$$(t_1, t_2) \cong (t_1, t_2) $$
+
+
+
 \subsection{Universal Quantification of Type Variables}
 
 There is a scenario later on in which universal quantification of type variables is required for a sound type system.
@@ -605,9 +624,13 @@ $$int = bool$$
 
 In order to allow polymorphism, universally quantified variables are required. They are denoted $u_n$, where $n \in \mathbb{N}$.
 
-Now, suppose we have an polymorphic entity of type $u_1$, and we want to assert its equality to both int and bool in two different points in an expression.
+
 
 \newpage
+
+\subsection{Reduction of Type Equations}
+
+The reduction of type equations is analogus to Gaussian elimination of linear systems of equations in linear algebra.
 
 \subsection{Instantiation of Types}
 
@@ -619,21 +642,13 @@ The instantiation function is a function from types to types. It takes a type an
 \item Return this new type.
 
 \end{enumerate}
-Instantiate is defined rigerously as follows:
 
-$$I: Type \rightarrow Type$$
-\begin{enumerate}
-\item $$I(int) = int$$
-\item$$I(ng) = ng$$
-\item$$I(str) = str$$
-\item$$I(bool) = bool$$
-\item$$I(t_i) = t_i$$
-\item$$I(u_i) = fresh()$$
-\item$$I(x_1 \rightarrow x_2) = I(x_1) \rightarrow I(x_2)$$
-\item$$I([x_i]) = [I(x_i)]$$
-\item$$I((x_1, x_2, \dots, x_n)) = (I(x_1), I(x_2), \dots, I(x_n))$$
-\end{enumerate}
-In lines 1 - 5, $I$ acts as the identity function. On line 6, a universally quantified type variable is replaced with a fresh type variable. In lines 7 - 9, recursion is performed throughout the argument.
+For example
+
+$$I(t_1 \rightarrow u_1 \rightarrow u_2 ) = (t_1 \rightarrow t_2 \rightarrow t_3)$$
+
+
+\subsection{Generalization of Types}
 
 \subsection{Type Relation}
 
@@ -750,14 +765,20 @@ $$\Sigma \rightarrow e_2 : t_2 \rightarrow \mathcal{E}_2$$
 \subsection{Switch Expression}
 
 
-$$\Sigma \rightarrow \text{switch } e => | p_1 \rightarrow e_1 | ... | p_n \rightarrow e_n \text{ end} : t \rightarrow \mathcal{E}_\text{branches} \cup \mathcal{E}_\text{types equal}$$
+$$\Sigma \rightarrow \text{switch } e => | p_1 \rightarrow e_1 | ... | p_n \rightarrow e_n \text{ end} : t \rightarrow \mathcal{E}_\text{branches} \cup \mathcal{E}_\text{types equal} \cup \mathcal{E}_\text{patterns}$$
 \noindent\makebox[\linewidth]{\rule{4.9in}{0.4pt}}
-$$\Sigma : e_1 : t_1 \rightarrow \mathcal{E}_1$$
-$$\Sigma : e_2 : t_2 \rightarrow \mathcal{E}_2$$
+
+$$p_1 : t_{n + 1} \rightarrow \Sigma_1$$
+$$p_2 : t_{n + 2} \rightarrow \Sigma_1$$
 $$\dots$$
-$$\Sigma : e_n : t_n \rightarrow \mathcal{E}_n$$
+$$p_n : t_{2n} \rightarrow \Sigma_1$$
+$$\Sigma \circ \Sigma_1: e_1 : t_1 \rightarrow \mathcal{E}_1$$
+$$\Sigma \circ \Sigma_2: e_2 : t_2 \rightarrow \mathcal{E}_2$$
+$$\dots$$
+$$\Sigma \circ \Sigma_n: e_n : t_n \rightarrow \mathcal{E}_n$$
 $$\mathcal{E}_\text{types equal} = \bigcup _ {i = 1} ^ n \{t = t_i\}$$
 $$\mathcal{E}_\text{branches} = \bigcup _ {i = 1} ^ n \mathcal{E}_i$$
+$$\mathcal{E}_\text{patterns} = \bigcup _ {i = n + 1} ^ {2n} \{t_p = t_i\}$$
 The type of a switch expression is essentially the type of any given branch. The types of the branch bodies must all be the same.
 
 
